Fix image spacing

--- a/_sass/components/_images.scss
+++ b/_sass/components/_images.scss
@@ -33,20 +33,33 @@ figure,
 	}
 
     @media (min-width: 700px) {
-        width: containers("tablet");
+        --w: 720px;
+        --container: 610px;
+        
+        --m: calc(calc(var(--w) - var(--container)) / 2 * -1);
+        
+        width: var(--w);
         max-width: unset;
-        margin: 0 -15px calc(var(--pad) * 3);
+        margin: 0 var(--m) calc(var(--pad) * 3);
     }
 
     @media (min-width: 1100px) {
-        width: containers("desktop") + 140px;
-        margin: 0 -85px calc(var(--pad) * 3);
+        --w: 1100px;
+        --container: 870px;
+        
+        --m: calc(calc(var(--w) - var(--container)) / 2 * -1);
+        
+        width: var(--w);
+        margin: 0 var(--m) calc(var(--pad) * 3);
     }
+
 }
 
 figcaption {
     display: relative;
+    max-width: 40ch;
     margin: var(--pad) 0;
+    padding: 0 var(--pad);
     line-height: 1.25;
     text-align: left;
     font-size: clamp(18px, 3vw, 24px);
